--- a/EN-cats_grid.html
+++ b/EN-cats_grid.html
@@ -402,7 +402,7 @@
             <!-- Cat 11 - Cléo -->
             <div class="cat-card" onclick="openModal('cat11')">
                 <div class="status-available">Available</div>
-                <img src="./assets/img/Cats-grid/Cléo/Cléo1.jpg" alt="Cléo" class="cat-image">
+                <img src="./assets/img/Cats-grid/Cléo/Cléo.png" alt="Cléo" class="cat-image">
                 <div class="cat-info">
                     <div class="cat-name">Cléo</div>
                     <div class="cat-details">
@@ -1782,11 +1782,11 @@
                 compatibleWithDogs: null,
                 description: 'This beauty has long and soft fur, very inviting for petting. Initially quite shy, Cléo has become a very affectionate and sweet kitten. She loves a good play session and pâté time.',
                 images: [
+                    './assets/img/Cats-grid/Cléo/Cléo.png',
                     './assets/img/Cats-grid/Cléo/Cléo.jpg',
                     './assets/img/Cats-grid/Cléo/Cléo1.jpg',
                     './assets/img/Cats-grid/Cléo/Cléo2.jpg',
-                    './assets/img/Cats-grid/Cléo/Cléo3.jpg',
-                    './assets/img/Cats-grid/Cléo/Cléo4.jpg'
+                    './assets/img/Cats-grid/Cléo/Cléo3.jpg'
                 ]
             },
             /* Cat 12 - Daisy */
