--- a/cats_grid.html
+++ b/cats_grid.html
@@ -401,7 +401,7 @@
             <!-- Cat 11 - Cléo -->
             <div class="cat-card" onclick="openModal('cat11')">
                 <div class="status-available">Disponível</div>
-                <img src="./assets/img/Cats-grid/Cléo/Cléo1.jpg" alt="Cléo" class="cat-image">
+                <img src="./assets/img/Cats-grid/Cléo/Cléo.png" alt="Cléo" class="cat-image">
                 <div class="cat-info">
                     <div class="cat-name">Cléo</div>
                     <div class="cat-details">
@@ -1886,11 +1886,11 @@
                 compatibleWithDogs: null,
                 description: 'Esta beldade tem um pelo longo e macio, mesmo convidativo a festinhas. Inicialmente bastante tímida, a Cléo tem-se tornado numa gatinha muito dengosa e meiga. Adora uma boa brincadeira e a hora do patê.',
                 images: [
+                    './assets/img/Cats-grid/Cléo/Cléo.png',
                     './assets/img/Cats-grid/Cléo/Cléo.jpg',
                     './assets/img/Cats-grid/Cléo/Cléo1.jpg',
                     './assets/img/Cats-grid/Cléo/Cléo2.jpg',
-                    './assets/img/Cats-grid/Cléo/Cléo3.jpg',
-                    './assets/img/Cats-grid/Cléo/Cléo4.jpg'
+                    './assets/img/Cats-grid/Cléo/Cléo3.jpg'
                 ]
             },
             /* Cat 12 - Daisy */
