--- a/index.html
+++ b/index.html
@@ -125,10 +125,10 @@
                         <!-- Slide 1 -->
                         <div class="carousel-slide">
                             <div class="cat-preview-card">
-                                <img src="./assets/img/Cats-grid/Adolfina/Adolfina.jpg" alt="Adolfina" loading="lazy">
+                                <img src="./assets/img/Cats-grid/Aquafit/Aquafit.png" alt="Aquafit" loading="lazy">
                                 <div class="cat-preview-info">
-                                    <h3>Adolfina</h3>
-                                    <p>1 ano • Feminino • Europeu Comum</p>
+                                    <h3>Aquafit</h3>
+                                    <p>13 semanas • Masculino • Europeu Comum</p>
                                     <span class="cat-preview-status">Disponível</span>
                                 </div>
                             </div>
@@ -1037,7 +1037,7 @@
             var allCatCards = [
                 // Slide 1
                 [
-                    { name: 'Adolfina', age: '1 ano', gender: 'Feminino', breed: 'Europeu Comum', image: './assets/img/Cats-grid/Adolfina/Adolfina.jpg' },
+                    { name: 'Aquafit', age: '13 semanas', gender: 'Masculino', breed: 'Europeu Comum', image: './assets/img/Cats-grid/Aquafit/Aquafit.png' },
                     { name: 'Baunilha', age: '2 anos', gender: 'Masculino', breed: 'Europeu Comum', image: './assets/img/Cats-grid/Baunilha/Baunilha.jpg' },
                     { name: 'Brownie', age: '2 anos', gender: 'Masculino', breed: 'Siamês', image: './assets/img/Cats-grid/Brownie/Brownie3.jpg' }
                 ],
