--- a/EN-index.html
+++ b/EN-index.html
@@ -121,11 +121,11 @@
                         <!-- Slide 1 -->
                         <div class="carousel-slide">
                             <div class="cat-preview-card">
-                                <img src="./assets/img/Cats-grid/Adolfina/Adolfina.jpg" alt="Adolfina" loading="lazy">
+                                <img src="./assets/img/Cats-grid/Aquafit/Aquafit.png" alt="Aquafit" loading="lazy">
                                 <div class="cat-preview-info">
-                                    <h3>Adolfina</h3>
-                                    <p>1 year • Female • European Shorthair</p>
-                                    <span class="cat-preview-status">Available</span>
+                                    <h3>Aquafit</h3>
+                                    <p>13 weeks • Male • European Shorthair</p>
+                                    <span class="cat-preview-status">Disponível</span>
                                 </div>
                             </div>
                             <div class="cat-preview-card">
@@ -1018,7 +1018,7 @@
             var allCatCards = [
                 // Slide 1
                 [
-                    { name: 'Adolfina', age: '1 year', gender: 'Female', breed: 'European Shorthair', image: './assets/img/Cats-grid/Adolfina/Adolfina.jpg' },
+                    { name: 'Aquafit', age: '13 weeks', gender: 'Male', breed: 'European Shorthair', image: './assets/img/Cats-grid/Aquafit/Aquafit.png' },
                     { name: 'Baunilha', age: '2 years', gender: 'Male', breed: 'European Shorthair', image: './assets/img/Cats-grid/Baunilha/Baunilha.jpg' },
                     { name: 'Brownie', age: '2 years', gender: 'Male', breed: 'Siamese', image: './assets/img/Cats-grid/Brownie/Brownie3.jpg' }
                 ],
