--- a/EN-cats_grid.html
+++ b/EN-cats_grid.html
@@ -2539,7 +2539,7 @@
                 ]
             },
             /* Cat 53 - Michael (Mike) */
-            cat53: {
+            /* cat53: {
                 name: 'Michael (Mike)',
                 gender: 'Male',
                 age: '3 years',
@@ -2554,7 +2554,7 @@
                 images: [
                     './assets/img/Cats-grid/Michael/Michael.jpg'
                 ]
-            },
+            }, */
             /* Cat 54 - Mocha */
             cat54: {
                 name: 'Mocha',
