--- a/cats_grid.html
+++ b/cats_grid.html
@@ -975,7 +975,7 @@
             </div>
 
             <!-- Cat 53 - Michael (Mike) -->
-            <div class="cat-card" onclick="openModal('cat53')">
+           <!--  <div class="cat-card" onclick="openModal('cat53')">
                 <div class="status-available">Disponível</div>
                 <img src="./assets/img/Cats-grid/Michael/Michael.jpg" alt="Michael (Mike)" class="cat-image">
                 <div class="cat-info">
@@ -986,7 +986,7 @@
                         <span class="detail-tag">Europeu Comum</span>
                     </div>
                 </div>
-            </div>
+            </div> -->
 
             <!-- Cat 54 - Mocha -->
             <div class="cat-card" onclick="openModal('cat54')">
